digits framework updated in android